--- a/.env-example
+++ b/.env-example
@@ -10,3 +10,12 @@ DB_MAX_CONNECTION=10
 DB_MAX_IDLE_CONNECTION=5
 DB_MAX_LIFETIME_CONNECTION=5
 DB_SSL_MODE=disable
+
+SECRET=
+SECRET_REFRESH_TOKEN=
+TOKEN_EXP_TIME=72
+REFRESH_TOKEN_EXP_TIME=720
+SESSION_EXP="24h"
+
+JWE_PRIVATE_KEY=../../domain/files/id_rsa
+JWE_PRIVATE_KEY_PASSPHRASE=
