add image product

--- a/.env-example
+++ b/.env-example
@@ -19,3 +19,5 @@ SESSION_EXP="24h"
 
 JWE_PRIVATE_KEY=../../domain/files/id_rsa
 JWE_PRIVATE_KEY_PASSPHRASE=
+
+IMAGE_DIRECTORY=../../assets/images/
